@@ -75,6 +75,7 @@ ext {
 
 apply from: "gradle/versioning.gradle"
 apply from: "gradle/dependencies.gradle"
+apply from: "gradle/wrapper.gradle"
 
 allprojects {
     group = 'org.gradle'
@@ -393,31 +394,6 @@ task verifyIsProductionBuildEnvironment << {
 if (isCiServer) {
     subprojects { reporting.baseDir "$rootProject.reporting.baseDir/${path.replaceFirst(':', '').replaceAll(':', '.')}" }
 }
-
-def wrapperUpdateTask = { name, label ->
-    task "${name}Wrapper"(type: Wrapper) {
-        group = "wrapper"
-        doFirst {
-            def version = new groovy.json.JsonSlurper().parseText(new URL("http://services.gradle.org/versions/$label").text)
-            if (version.empty) {
-                throw new GradleException("Cannot update wrapper to '${label}' version as there is currently no version of that label")
-            }
-            println "updating wrapper to $label version: $version.version (downloadUrl: $version.downloadUrl)"
-            distributionUrl version.downloadUrl
-        }
-        doLast {
-            def jvmOpts = "-Xmx1024m -XX:MaxPermSize=256m -Dfile.encoding=UTF-8"
-            inputs.property("jvmOpts", jvmOpts)
-            def optsEnvVar = "DEFAULT_JVM_OPTS"
-            scriptFile.write scriptFile.text.replace("$optsEnvVar=\"\"", "$optsEnvVar=\"$jvmOpts\"")
-            batchScript.write batchScript.text.replace("set $optsEnvVar=", "set $optsEnvVar=$jvmOpts")
-        }
-    }
-}
-
-wrapperUpdateTask("nightly", "nightly")
-wrapperUpdateTask("rc", "release-candidate")
-wrapperUpdateTask("current", "current")
 
 def groovyProjects() {
     subprojects.findAll { !(it.name in ["docs"]) }
